feat(openapi): generated classes can implement interfaces
Signed-off-by: Marc Nuri <marc@marcnuri.com>